--- a/8-02-HW/8-02.md
+++ b/8-02-HW/8-02.md
@@ -27,6 +27,11 @@
 3. Создайте в jenkins Freestyle Project, подключите получившийся репозиторий к нему и произведите запуск тестов и сборку проекта ```go test .``` и  ```docker build .```.
 
 В качестве ответа пришлите скриншоты с настройками проекта и результатами выполнения сборки.
+![alt text](https://github.com/username/reponame/blob/branch/path/image.png)
+
+![alt text](https://github.com/username/reponame/blob/branch/path/image.png)
+
+![alt text](https://github.com/username/reponame/blob/branch/path/image.png)
 
 ---
 
