--- a/8-02-HW/8-02.md
+++ b/8-02-HW/8-02.md
@@ -51,6 +51,15 @@
 
 В качестве ответа пришлите скриншоты с настройками проекта и результатами выполнения сборки.
 
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/7.JPG)
+
+---
+
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/8.JPG)
+
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/9.JPG)
+
+---
 ---
 
 ### Задание 3
