--- a/8-02-HW/8-02.md
+++ b/8-02-HW/8-02.md
@@ -73,6 +73,16 @@
 
 В качестве ответа пришлите скриншоты с настройками проекта и результатами выполнения сборки.
 
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/10.JPG)
+
+---
+
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/11.JPG)
+
+---
+
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/12.JPG)
+
 ---
 ## Дополнительные задания* (со звёздочкой)
 
