--- a/8-02-HW/8-03.md
+++ b/8-02-HW/8-03.md
@@ -27,6 +27,12 @@
 
 В качестве ответа в репозиторий шаблона с решением добавьте скриншоты с настройками раннера в проекте.
 
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/runner1.JPG)
+
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/runner2.JPG)
+
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/runner3.JPG)
+
 ---
 
 ### Задание 2
@@ -40,7 +46,8 @@
    
  * файл gitlab-ci.yml для своего проекта или вставьте код в соответствующее поле в шаблоне; 
  * скриншоты с успешно собранными сборками.
- 
+
+ ![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/lab_yaml.JPG)
  
 ---
 ## Дополнительные задания* (со звёздочкой)
