--- a/8-02-HW/8-03.md
+++ b/8-02-HW/8-03.md
@@ -47,7 +47,13 @@
  * файл gitlab-ci.yml для своего проекта или вставьте код в соответствующее поле в шаблоне; 
  * скриншоты с успешно собранными сборками.
 
- ![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/lab_yaml.JPG)
+ ![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/успех2.JPG)
+
+ ![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/успех2.1.JPG)
+
+ ![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/успех2.3.JPG)
+
+ ![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/успех2.4.JPG)
  
 ---
 ## Дополнительные задания* (со звёздочкой)
