--- a/smon-homeworks/hw-01.md
+++ b/smon-homeworks/hw-01.md
@@ -59,7 +59,9 @@
 26. Сделайте скриншот
 
 #### Требования к результату
-* прикрепите в файл README.md скриншот вашего дашборда в Yandex Monitoring с мониторингом загрузки процессора виртуальной машины   
+* прикрепите в файл README.md скриншот вашего дашборда в Yandex Monitoring с мониторингом загрузки процессора виртуальной машины
+
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/мониторинг1.JPG)   
 
 ---
 
