--- a/smon-homeworks/hw-02.md
+++ b/smon-homeworks/hw-02.md
@@ -41,6 +41,10 @@
 1. Прикрепите в файл README.md скриншот авторизации в админке
 2. Приложите в файл README.md текст использованных команд в GitHub
 
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/zabbix1.JPG)   
+
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/zabbix1.1.JPG)   
+
 ---
 
 ### Задание 2 
@@ -59,6 +63,18 @@
 2. Приложите в файл README.md скриншот лога zabbix agent, где видно, что он работает с сервером
 3. Приложите в файл README.md скриншот раздела Monitoring > Latest data для обоих хостов, где видны поступающие от агентов данные.
 4. Приложите в файл README.md текст использованных команд в GitHub
+
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/zabbix2.1.JPG)   
+
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/zabbix2.2.JPG)   
+
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/zabbix2.3.JPG)   
+
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/zabbix2.4.JPG)   
+
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/zabbix2.5.JPG)   
+
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/zabbix2.6.JPG)   
 
 ---
 ## Задание 3 со звёздочкой*
