--- a/smon-homeworks/hw-03.md
+++ b/smon-homeworks/hw-03.md
@@ -41,6 +41,8 @@
 #### Требования к результату
 - [ ] Прикрепите в файл README.md скриншот страницы шаблона с названием «Задание 1»
 
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/zabbix2_1.JPG)   
+
  ---
 
 ### Задание 2
@@ -71,6 +73,9 @@
 #### Требования к результату
 - [ ] Прикрепите в файл README.md скриншот страницы хостов, где будут видны привязки шаблонов с названиями «Задание 2-3». Хосты должны иметь зелёный статус подключения
 
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/zabbix2_2-3.JPG)
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/zabbix2_2-3.2.JPG)
+
  ---
 
 ### Задание 4
@@ -83,6 +88,8 @@
 
 #### Требования к результату
 - [ ] Прикрепите в файл README.md скриншот дашборда с названием «Задание 4»
+
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/zabbix2_4.JPG)
 
  ---
 
