--- a/smon-homeworks/hw-04.md
+++ b/smon-homeworks/hw-04.md
@@ -42,6 +42,8 @@
 #### Требования к результату
 - [ ] Прикрепите к файлу README.md скриншот systemctl status prometheus, где будет написано: prometheus.service — Prometheus Service Netology Lesson 9.4 — [Ваши ФИО]
 
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/prometheus1.JPG)
+
 ---
 
 ### Задание 2
@@ -55,6 +57,8 @@
 
 #### Требования к результату
 - [ ] Прикрепите к файлу README.md скриншот systemctl status node-exporter, где будет написано: node-exporter.service — Node Exporter Netology Lesson 9.4 — [Ваши ФИО]
+
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/prometheus2.JPG)
 
 ---
 
@@ -71,6 +75,10 @@
 - [ ] Прикрепите к файлу README.md скриншот конфигурации из интерфейса Prometheus вкладки Status > Configuration
 - [ ] Прикрепите к файлу README.md скриншот из интерфейса Prometheus вкладки Status > Targets, чтобы было видно минимум два эндпоинта
 
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/prometheus3.1.JPG)
+
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/prometheus3.2.JPG)
+
 ---
 ## Дополнительные задания со звёздочкой*
 Эти задания дополнительные. Их можно не выполнять. Это не повлияет на зачёт. Вы можете их выполнить, если хотите глубже разобраться в материале.
@@ -83,6 +91,8 @@
 #### Требования к результату
 - [ ] Прикрепите к файлу README.md скриншот левого нижнего угла интерфейса, чтобы при наведении на иконку пользователя были видны ваши ФИО
 
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/prometheus4.JPG)
+
 ---
 
 ### Задание 5*
@@ -90,6 +100,8 @@
 
 #### Требования к результату
 - [ ] Прикрепите к файлу README.md скриншот дашборда (ID:11074) с поступающими туда данными из Node Exporter
+
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/prometheus5.JPG)
 
 ## Критерии оценки
 1. Выполнено минимум 3 обязательных задания
