--- a/smon-homeworks/hw-05.md
+++ b/smon-homeworks/hw-05.md
@@ -34,6 +34,8 @@
 ### Требования к результату
 - [ ] Погасите node exporter, стоящий на мониторинге, и прикрепите скриншот раздела оповещений Prometheus, где оповещение будет в статусе Pending
 
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/prometheus2.1.JPG)
+
 ---
 
 ### Задание 2
@@ -42,6 +44,9 @@
 ### Требования к результату
 - [ ] Прикрепите скриншот Alerts из Prometheus, где правило оповещения будет в статусе Fireing, и скриншот из Alertmanager, где будет видно действующее правило оповещения
 
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/prometheus2.1.2.JPG)
+
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/prometheus2.2.JPG)
 ---
 
 ### Задание 3
