--- a/smon-homeworks/hw-05.md
+++ b/smon-homeworks/hw-05.md
@@ -56,6 +56,10 @@
 ### Требования к результату
 - [ ] приложите скриншот браузера с открытым эндпоинтом, а также скриншот списка таргетов из интерфейса Prometheus.*
 
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/prometheus2.3.1.JPG)
+
+![alt text](https://github.com/Kirill67km/Netology-hw/blob/main/8-02-HW/CICD/prometheus2.3.2.JPG)
+
 ---
 
 ### Задание 4* со звездочкой 
